Fixes title margins on mobile

--- a/_sass/layouts/_projects.scss
+++ b/_sass/layouts/_projects.scss
@@ -89,9 +89,14 @@
     color: #fff;
     font-family: 'Khula', Helvetica, sans-serif;
     font-weight: bold;
-    margin: 10pt;
+    margin-top: 2pt;
+    margin-left: 5pt;
     pointer-events: none;
     text-align: left;
+
+    @include desktop {
+      margin: 10pt;
+    }
   }
   
   .breaking {
